# metakit-sdk

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release-python.yml  release-rust.yml  release-typescript.yml  release.yml
docs/: PUBLISHING.md  RELEASING.md  VERSIONING.md  committed-roots.md  jlvm-parity-plan.md  metakit-sdk-publish-brief.md  package-tiers.md
rust/jlvm-core/: Cargo.toml
rust/jlvm-core/src/: auth_db.rs  canonical.rs  coercion.rs  content_hash.rs  crypto.rs  ecvrf.rs  eval.rs  expression.rs  gas.rs  gas_eval.rs  hex.rs  hex_bytes.rs  lib.rs  numeric.rs  ops.rs  ordinal_catalog.rs  ratio.rs  value.rs
rust/jlvm-core/tests/: canonical.rs  content_hash_parity.rs  differential.rs  gas_differential.rs  mpt_sealed_proofs.rs  ordinal_catalog_differential.rs  robustness.rs  zk_differential.rs
rust/jlvm-core/tests/fixtures/: test-sealed-proofs.json
rust/poseidon-bn254/: Cargo.toml
rust/poseidon-bn254/src/: constants.rs  lib.rs  merkle.rs
rust/poseidon-bn254/tests/: merkle.rs  poseidon_vectors.rs
rust/zk-jlvm/: Cargo.toml
rust/zk-jlvm-shielded/: Cargo.toml
rust/zk-jlvm-shielded/lib/: Cargo.toml
rust/zk-jlvm-shielded/lib/src/: lib.rs  pub_values.rs  wire.rs
rust/zk-jlvm-shielded/lib/tests/: transition.rs
rust/zk-jlvm-shielded/program/: Cargo.toml
rust/zk-jlvm-shielded/program/src/: main.rs
rust/zk-jlvm-shielded/script/: Cargo.toml
rust/zk-jlvm-shielded/script/fixtures/: README.md  transition_groth16_fixture.json
rust/zk-jlvm-shielded/script/src/: main.rs
rust/zk-jlvm/lib/: Cargo.toml
rust/zk-jlvm/lib/src/: lib.rs
rust/zk-jlvm/program/: Cargo.toml
rust/zk-jlvm/program/src/: main.rs
rust/zk-jlvm/script/: Cargo.toml
rust/zk-jlvm/script/src/: main.rs
rust/zk-shielded/: .gitignore  Cargo.toml
rust/zk-shielded/lib/: Cargo.toml
rust/zk-shielded/lib/src/: lib.rs  pub_values.rs  wire.rs
rust/zk-shielded/lib/tests/: native_vector.rs  transfer.rs
rust/zk-shielded/lib/tests/vectors/: shielded_transfer_v1.json
rust/zk-shielded/program/: Cargo.toml
rust/zk-shielded/program/src/: main.rs
rust/zk-shielded/script/: Cargo.toml
rust/zk-shielded/script/fixtures/: README.md  shielded_groth16_fixture.json
rust/zk-shielded/script/src/: main.rs
shared/: gas_test_vectors.json  json_logic_test_vectors.json  ordinal_catalog_test_vectors.json  zk_opcode_test_vectors.json
