[package]
name = "jlvm-core"
version = "0.1.0"
edition = "2021"
authors = ["Constellation Network"]
description = "Rust recreation of the metakit JSON Logic VM (JLVM), byte-compatible with the Scala evaluator. Foundation for a future zk-JLVM."
license = "Apache-2.0"
repository = "https://github.com/Constellation-Labs/metakit-sdk"

[dependencies]
# Exact-rational arithmetic (the JLVM "float" is an exact Ratio, matching Scala's numerics.Ratio).
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
# ECMAScript-compliant shortest-double serializer. This mirrors the Scala
# JsonCanonicalizer's DoubleSerializerImpl (Ryu with ecmaMode = true).
ryu-js = "1.0"
# JSON parsing for decoding expr/data and the conformance vectors.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- ZK / crypto opcodes (Tier 1) -------------------------------------------
# Circomlib-compatible Poseidon over BN254 Fr + fixed-depth Poseidon Merkle tree,
# already byte-compatible with the Scala reference. Backs `poseidon` and `pmt_verify`.
poseidon-bn254 = { path = "../poseidon-bn254" }
# BN254 (alt_bn128) G1 curve arithmetic for `schnorr_verify`. Matches the Besu
# AltBn128Point semantics used by the Scala `Bn254.G1` (generator (1, 2), affine
# point-at-infinity = (0, 0)).
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
# SHA-256 for the Schnorr challenge c = SHA256(R || pk || msg) mod r.
sha2 = "0.10"

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "jlvm_core"
path = "src/lib.rs"

[[test]]
name = "differential"
path = "tests/differential.rs"

[[test]]
name = "zk_differential"
path = "tests/zk_differential.rs"
