[package]
name = "constellation-metagraph-sdk-jlvm"
version = "1.8.0-rc.2"
edition = "2021"
authors = ["Constellation Network"]
description = "Rust recreation of the metakit JSON Logic VM (JLVM), byte-compatible with the Scala evaluator. Foundation for a future zk-JLVM."
license = "Apache-2.0"
repository = "https://github.com/Constellation-Labs/metakit-sdk"

[dependencies]
# Exact-rational arithmetic (the JLVM "float" is an exact Ratio, matching Scala's numerics.Ratio).
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
# ECMAScript-compliant shortest-double serializer. This mirrors the Scala
# JsonCanonicalizer's DoubleSerializerImpl (Ryu with ecmaMode = true).
ryu-js = "1.0"
# JSON parsing for decoding expr/data and the conformance vectors.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- ZK / crypto opcodes (Tier 1) -------------------------------------------
# Circomlib-compatible Poseidon over BN254 Fr + fixed-depth Poseidon Merkle tree,
# already byte-compatible with the Scala reference. Backs `poseidon` and `pmt_verify`.
# The `version` is required so `cargo package`/`publish` can rewrite this path
# dependency into a registry dependency. Keep it in lock-step with the crate
# version (the release workflow checks both against the tag).
poseidon-bn254 = { path = "../poseidon-bn254", version = "1.8.0-rc.2", package = "constellation-metagraph-sdk-poseidon-bn254" }
# BN254 (alt_bn128) G1 curve arithmetic for `schnorr_verify`. Matches the Besu
# AltBn128Point semantics used by the Scala `Bn254.G1` (generator (1, 2), affine
# point-at-infinity = (0, 0)).
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
# SHA-256 for the Schnorr challenge c = SHA256(R || pk || msg) mod r.
# SHA-512 for the ECVRF (RFC 9381) hashes (hash_to_curve / hash_points /
# proof_to_hash / nonce / key derivation).
sha2 = "0.10"

# --- ZK / crypto opcodes (Tier 2b) ------------------------------------------
# Edwards25519 group + scalar arithmetic for `ecvrf_verify`
# (ECVRF-EDWARDS25519-SHA512-TAI, RFC 9381 suite 0x03). `CompressedEdwardsY` is
# exactly the RFC 8032 little-endian point encoding the ciphersuite requires, so
# this PORTS the Scala `MiraclEcVrf25519` line-for-line; no third-party VRF crate
# matches this exact draft-10 TAI ciphersuite + beta/decoding quirks. The BN254
# G2 point + optimal-ate pairing for `bn254_pairing` reuse the existing
# ark-bn254 / ark-ec deps from Tier-1.
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }

# --- ZK / crypto opcodes (Tier 3b) ------------------------------------------
# BLS12-381 signatures for `bls_verify` / `bls_aggregate_verify`. `blst` is
# supranational/blst, the eth2 reference BLS library; its `min_pk` module is
# exactly the minimal-pubkey-size ProofOfPossession variant (48B G1 pubkeys,
# 96B G2 signatures, signature DST BLS_SIG_BLS12381G2_XMD:SHA-256_SSWU_RO_POP_)
# that the Scala `Bls12381` (BouncyCastle 1.85 BLS12_381ProofOfPossession) and
# the published ethereum/bls12-381-tests v0.1.2 vectors use. Matching that
# library + DST is what makes the Rust opcodes byte-identical to the Scala
# reference (which already reproduces the published vectors).
#
# OPTIONAL + default-on: `blst` is the only C-backed dependency, and its C
# backend does not cross-compile for the SP1 `riscv64im-succinct-zkvm-elf` target
# with the system `cc`. The `bls` feature gates it (and the `bls_verify` /
# `bls_aggregate_verify` opcodes) so a zkVM GUEST can depend on jlvm-core with
# `default-features = false` and still get every other opcode. Native builds keep
# `bls` on by default, so byte-compatibility with the Scala reference is unchanged.
blst = { version = "0.3.16", optional = true }

[features]
default = ["bls"]
# BLS12-381 signature opcodes (`bls_verify`, `bls_aggregate_verify`), backed by `blst`.
bls = ["dep:blst"]

[dev-dependencies]
serde_json = "1.0"
# Parity pin: `content_hash::drop_nulls` must produce the same cleaned value
# (and the same canonical bytes / sha256) as the Rust SDK's `drop_null_fields`
# (packages/rust), which is itself pinned to the TS SDK and the Scala server.
constellation-metagraph-sdk = { path = "../../packages/rust" }

# Deterministic-VM hardening: a silent two's-complement wrap in release builds
# would be a consensus/parity hazard, so integer overflow must panic (and be
# caught as an error) in release exactly as it does in debug.
[profile.release]
overflow-checks = true

[lib]
name = "jlvm_core"
path = "src/lib.rs"

[[test]]
name = "differential"
path = "tests/differential.rs"

[[test]]
name = "zk_differential"
path = "tests/zk_differential.rs"
