[package]
name = "zk-jlvm-shielded-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
poseidon-bn254 = { path = "../../poseidon-bn254" }
jlvm-core = { path = "../../jlvm-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
