[package]
name = "constellation-metagraph-sdk-confidential-state-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
poseidon-bn254 = { path = "../../poseidon-bn254", package = "constellation-metagraph-sdk-poseidon-bn254" }
# default-features = false: the shielded transition never uses the BLS opcodes, and the guest
# must not pull `blst` (no riscv C cross-compile). Feature-unification means BOTH this dep and
# the guest's direct jlvm-core dep have to opt out for the guest to stay blst-free.
jlvm-core = { path = "../../jlvm-core", default-features = false, package = "constellation-metagraph-sdk-jlvm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "zk_jlvm_shielded_lib"
