[package]
name = "zk-jlvm-shielded-script"
version = "0.1.0"
edition = "2021"
default-run = "zk-jlvm-shielded"

[[bin]]
name = "zk-jlvm-shielded"
path = "src/main.rs"

[dependencies]
# `cuda` enables the SP1 GPU prover when SP1_PROVER=cuda; CPU is the default.
sp1-sdk = { version = "6.0.1", features = ["blocking", "cuda"] }
zk-jlvm-shielded-lib = { path = "../lib" }
poseidon-bn254 = { path = "../../poseidon-bn254" }
alloy-sol-types = { workspace = true }
num-bigint = "0.4"
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
dotenv = "0.15"

[build-dependencies]
sp1-build = "6.0.1"
