[package]
name = "zk-shielded-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
poseidon-bn254 = { path = "../../poseidon-bn254" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
