[package]
name = "constellation-metagraph-sdk-confidential-transfer-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "6.0.1"
zk-shielded-lib = { path = "../lib", package = "constellation-metagraph-sdk-confidential-transfer-lib" }
alloy-sol-types = { workspace = true }
serde_json = "1.0"
